--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -152,15 +152,14 @@ w2ui-toolbar {
 	height: 30px;
 }
 
-#tb_formulabar_item_address,
-#tb_formulabar_item_item_2,
-#tb_formulabar_item_functiondialog,
-#tb_formulabar_item_sum,
-#tb_formulabar_item_function,
-#tb_formulabar_item_cancelformula,
-#tb_formulabar_item_acceptformula {
-	padding-top: 2px;
+.inputbar_multiline #tb_formulabar_item_address,
+.inputbar_multiline #tb_formulabar_item_item_2,
+.inputbar_multiline #tb_formulabar_item_functiondialog {
 	vertical-align: top;
+}
+
+.inputbar_multiline #tb_formulabar_item_functiondialog {
+	padding-top: 4px;
 }
 
 #presentation-toolbar {
@@ -207,8 +206,10 @@ w2ui-toolbar {
 }
 
 #addressInput {
-	height: 24px;
+	height: 22px;
 	width: 100px;
+	padding: 2px 4px;
+	margin-top: 1px;
 }
 
 #formulaInput {
