--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -77,7 +77,7 @@
 }
 .main-nav.hasnotebookbar {
 	height: var(--header-height);
-	overflow: scroll hidden;
+	/* overflow is set dynamically */
 	scrollbar-width: none;
 	-ms-scrollbar: none;
 }
