--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -856,10 +856,10 @@ td[id^='tb_spreadsheet-toolbar_item']:focus table.w2ui-button div.w2ui-icon, td[
 	}
 }
 
-#toolbar-down .freemium-disabled .w2ui-tb-image {
+#toolbar-down .locking-disabled .w2ui-tb-image {
 	overflow: visible;
 }
-#toolbar-down .freemium-disabled .w2ui-icon:before {
+#toolbar-down .locking-disabled .w2ui-icon:before {
 	display: block;
 	content: '';
 	width: 18px;
