--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -413,45 +413,45 @@ li .disabled .keyboard {
 }
 
 /* For classic mode */
-#main-menu .freemium-disabled, #menu-nb-hamburger .freemium-disabled {
+#main-menu .locking-disabled, #menu-nb-hamburger .locking-disabled {
 	color: var(--color-text-lighter) !important;
 	background-color: var(--color-background-lighter);
 	box-shadow: inset 0 0 2px 0 rgba(0,0,0,0.2);
 	background: url('images/lc_freeemiumlock.svg') right top / 24px no-repeat
 }
 
-#main-menu .freemium-disabled {
+#main-menu .locking-disabled {
 	background-size: 19px;
 	background-position-y: 3px;
 }
 
-#main-menu .freemium-disabled:hover, #menu-nb-hamburger .freemium-disabled:hover {
+#main-menu .locking-disabled:hover, #menu-nb-hamburger .locking-disabled:hover {
 	background-color: var(--color-background-lighter);
 	background-position: right bottom !important;
 }
 
-#main-menu .freemium-disabled:hover {
+#main-menu .locking-disabled:hover {
 	background-position-y: -17px !important;
 }
 
 /* For notebook bar mode and sidebar*/
-.freemium-disabled:not(.mobile-wizard) img.unobutton, #toolbar-up .freemium-disabled .w2ui-tb-image.w2ui-icon {
+.locking-disabled:not(.mobile-wizard) img.unobutton, #toolbar-up .locking-disabled .w2ui-tb-image.w2ui-icon {
 	background: url('images/lc_freeemiumlock.svg') center top / 24px no-repeat !important;
 	width: 24px !important;
 	padding-left: 24px;
 	box-sizing: border-box;
 }
 
-.freemium-disabled:hover img.unobutton, #toolbar-up .freemium-disabled .w2ui-tb-image.w2ui-icon:hover {
+.locking-disabled:hover img.unobutton, #toolbar-up .locking-disabled .w2ui-tb-image.w2ui-icon:hover {
 	background-position: bottom !important;
 }
 
-.freemium-disabled > .notebookbar.has-label img.unobutton {
+.locking-disabled > .notebookbar.has-label img.unobutton {
 	background-size: 32px;
 	padding-left: 32px;
 }
 /* For mobile mode */
-#mobile-wizard .freemium-overlay {
+#mobile-wizard .locking-overlay {
 	position: relative;
 	width: 20px;
 	height: 20px;
@@ -464,14 +464,14 @@ li .disabled .keyboard {
 	overflow: hidden;
 }
 
-#mobile-wizard:not(.menuwizard) .freemium-overlay {
+#mobile-wizard:not(.menuwizard) .locking-overlay {
 	top: -38px;
-	background: white;
+	background: var(--color-background-lighter);
 	left: -8px;
 	box-shadow: 0 0 1px 2px #00000025;
 }
 
-#mobile-wizard:not(.menuwizard) button ~ .freemium-overlay {
+#mobile-wizard:not(.menuwizard) button ~ .locking-overlay {
 	/* targetting primary buttons on mobile e.g.: master slide*/
 	margin: auto;
 	padding-right: 77%;
@@ -480,11 +480,11 @@ li .disabled .keyboard {
 	filter: brightness(4);
 }
 
-#mobile-wizard:not(.menuwizard) .freemium-overlay-lock {
+#mobile-wizard:not(.menuwizard) .locking-overlay-lock {
 	filter: brightness(0.8) contrast(1.8);
 }
 
-#mobile-wizard.menuwizard .freemium-overlay-lock {
+#mobile-wizard.menuwizard .locking-overlay-lock {
 	width: 20px;
 	filter: brightness(0.8) contrast(1.8);
 	-webkit-animation-iteration-count: 1;
@@ -510,7 +510,7 @@ li .disabled .keyboard {
 	100%{margin-top: 0;}
 }
 
-.sidebar .freemium-overlay {
+.sidebar .locking-overlay {
 	height: 22px;
 	overflow: hidden;
 	float: left;
@@ -519,16 +519,16 @@ li .disabled .keyboard {
 	box-shadow: 0 0 1px 1px #0003;
 	border-radius: 12px;
 }
-.sidebar .freemium-overlay-lock {
+.sidebar .locking-overlay-lock {
 	width: 20px;
-	background-color: white;
+	background-color: var(--color-background-lighter);
 	padding: 1px;
 }
-.sidebar .freemium-disabled:hover .freemium-overlay-lock {
+.sidebar .locking-disabled:hover .locking-overlay-lock {
 	margin-top: -20px;
 }
-.sidebar .freemium-disabled button:hover ~ .freemium-overlay {
-	box-shadow: 0 0 4px 0 #0b87e7;
+.sidebar .locking-disabled button:hover ~ .locking-overlay {
+	box-shadow: 0 0 4px 0 var(--color-primary-darker);
 }
 .restricted-item {
 	display: none !important;
