--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -261,11 +261,11 @@
 
 .unotoolbutton.notebookbar.disabled:not(.unospan-shortcutstoolbox),
 .mobile-wizard-widebutton.disabled,
-.freemium-disabled {
+.locking-disabled {
 	opacity: 0.65;
 }
 
-.freemium-disabled:hover {
+.locking-disabled:hover {
 	opacity: 1;
 }
 
